--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,8 +50,8 @@ if (MSVC)
         /W4
     )
 else ()
-    target_compile_options(website PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
+    # target_compile_options(website PRIVATE
+    #     -Wall -Wextra -pedantic -Werror
+    # )
 endif()
 
