fix empty link in learn more

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,8 +57,11 @@ if (MSVC)
         /W4
     )
 else ()
-    # target_compile_options(website PRIVATE
-    #     -Wall -Wextra -pedantic -Werror
-    # )
+    target_compile_options(website PRIVATE
+        # -Wall 
+        -Wextra 
+        -pedantic 
+        -Werror
+    )
 endif()
 
